# purchase-predict-reloaded

./: .pre-commit-config.yaml  README.md  cloudbuild.yaml  install.sh  pyproject.toml  requirements.txt  scan_kedro_imports.py
.viz/: stats.json
conf/base/: catalog.yml  parameters.yml
src/purchase_predict_reloaded/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/purchase_predict_reloaded/pipelines/loading/: pipeline.py
src/purchase_predict_reloaded/pipelines/prediction/: nodes.py  pipeline.py
src/purchase_predict_reloaded/pipelines/processing/: __init__.py  nodes.py  pipeline.py
src/purchase_predict_reloaded/pipelines/training/: nodes.py  pipeline.py
src/tests/: test_run.py
src/tests/pipelines/loading/: conftest.py  test_nodes.py  test_pipeline.py
src/tests/pipelines/processing/: conftest.py  test_nodes.py  test_pipeline.py
src/tests/pipelines/training/: conftest.py  test_model.py
tests/: test_basic.py
venv10/: pyvenv.cfg
