[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | venv
  | build
  | dist
  | conf
)/
'''

[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "purchase_predict_reloaded"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
purchase-predict-reloaded = "purchase_predict_reloaded.__main__:main"

[tool.kedro]
package_name = "purchase_predict_reloaded"
project_name = "Purchase Predict Reloaded"
kedro_init_version = "0.19.8"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "purchase_predict_reloaded.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "b21cf26df1364a1cbd67d8fb850918c0"
